<resources>
    <string name="app_name">kiwi</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="input_new_task">input new task</string>
    <string name="bottom_nav_text_calendar">Calendar</string>
    <string name="bottom_nav_text_copyright">CopyRight</string>
    <string name="copyright">CopyRight</string>
    <string name="app">App</string>
    <string name="app_author">narupi\nIndex197511\nBlackBracken</string>
    <string name="api">API</string>
    <string name="api_author">4afS</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="name">Name</string>
    <string name="tue">Tue</string>
    <string name="_1">"  1  "</string>
    <string name="_2">"  2  "</string>
    <string name="_3">"  3  "</string>
    <string name="_4">"  4  "</string>
    <string name="_5">"  5  "</string>
    <string name="linefeed">\n</string>
    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <string name="timetable">Timetable</string>
</resources>
